# Amazing-Automata

./: .deployrc  .gitignore  Dockerfile.ci  Makefile  README.md  manifest.json
.github/workflow/: ci.yml
.github/workflows/: deploy.yml
ci/: manifest.json
ci/ci-scripts/: build.sh  detect-entry.sh  docker-build-from-manifest.sh
client/: package-lock.json  package.json
client/src/: App.tsx  FileForm.tsx  main.tsx
client/src/core/store/: idnex.ts
client/src/core/store/api/: file.api.ts
example/: pyproject.toml  requirements.txt
example/tests/: test_main.py
project/: config.py  main.py  main.rs
project/example/: main.py
project/pages/details-and-tips/: 101.html
project/pages/fundamentals/: acknowledgements.html  function.html  function.tmd  tips.html
project/pages/optimizations/: 101.html
project/test/: CMakeLists.txt  main.py
project/test/src/: main.cpp  main.rs
python_test/: .deployrc  Dockerfile
python_test/ci/ci-scripts/: README.md
python_test/tests/: test_main.py
server/: package-lock.json  package.json
server/src/: app.module.ts
server/src/upload/: upload.controller.ts  upload.module.ts  upload.service.ts
